# Projeto_StreamLit

./: Cadastro.py  clientes.csv  pyproject.toml
