[project]
name = "proj-prático"
version = "0.1.0"
description = "Projeto prático - parte 1"
authors = [
    {name = "Giulia Bianchi da Silva"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.57.0,<2.0.0)",
    "pandas (>=3.0.2,<4.0.0)"
]

[tool.poetry]
packages = [{include = "proj"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
